# ChronoClientSDK

./: CMakeLists.txt  README.md  spack.yaml
cmake/: ChronoClientSDKConfig.cmake.in
examples/: main.cpp
include/: chronolog_client.h
src/: AcquireStoryResponseMsg.h  ChronologClient.cpp  ChronologClientImpl.cpp  ChronologClientImpl.h  ConnectResponseMsg.h  StoryChunkExtractor.cpp  chrono_monitor.h  chronolog_client.cpp
